...
    .onCellSelection { [weak self] cell, row in
        if #available(iOS 14, *) {
            ATTrackingManager.requestTrackingAuthorization { [weak self] status in
                var dialogMessage = UIAlertController(title: "AT Tracking",
                                                      message: "Authorization status: \(status.rawValue)",
                                                      preferredStyle: .alert)
                let ok = UIAlertAction(title: "OK", style: .default, handler: nil)
                dialogMessage.addAction(ok)
                DispatchQueue.main.async { [weak self] in
                    self?.present(dialogMessage, animated: true, completion: nil)
                }
            }
        }
...
