...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N2e-vv-3Xu">
                                <rect key="frame" x="27.5" y="50" width="320" height="50"/>
                                <color key="backgroundColor" red="0.24313725490196078" green="0.72156862745098038" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="PBMAdView">
                                    <accessibilityTraits key="traits" button="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="320" id="9pK-Ky-l4B"/>
                                    <constraint firstAttribute="height" constant="50" id="FlU-69-8p7"/>
                                </constraints>
...
